k8s/hospital-np-srv.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: hospitalservice-srv
 spec:
   type: NodePort
   selector:
      app: hospitalservice
   ports: 
      - name: hospitalservice
        protocol: TCP
        port: 80
        targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hospital-svc
spec:
  type: LoadBalancer
  selector:
    app: hospitalservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
